Заготовка блока генерации оформленого кода

--- a/src/DataProcessors/ОМ_Компонент_ОформлениеТелаМетодов/Описание.md
+++ b/src/DataProcessors/ОМ_Компонент_ОформлениеТелаМетодов/Описание.md
@@ -176,7 +176,7 @@
 БлокДля = Новый Структура(
   "ВидБлока",       "Для",
   "Инициализация",  БлокЛогическойСтроки,       // между «Для» и «По» (счётчик+начало)
-  "КонецСчётчика",  БлокЛогическойСтроки,       // между «По» и «Цикл»
+  "КонецСчетчика",  БлокЛогическойСтроки,       // между «По» и «Цикл»
   "Тело",           БлокКода
 );
 ```
